fix(app): overflow fix 2

--- a/src/styles/mobile-nav.scss
+++ b/src/styles/mobile-nav.scss
@@ -15,7 +15,7 @@
     width: var(--_size);
     height: var(--_size);
     aspect-ratio: 1;
-    position: absolute;
+    position: fixed;
     z-index: calc(var(--_z-index) + 1);
     inset: var(--_padding) var(--_padding) auto auto;
 
@@ -57,7 +57,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--gap-6);
-    position: absolute;
+    position: fixed;
     z-index: var(--_z-index);
     inset: 0;
     padding-block-start: calc(var(--_padding) + 2rem);
